--- a/content/product.html
+++ b/content/product.html
@@ -26,7 +26,7 @@ description: Articles, presentations, and other achievements
 </ul>
 <h4>Presentations</h4>
 <ul>
-
+	<li><a href="https://wpengine.com/summit/">WP Engine Summit 2017</a></li>
     <li><a href="http://nowwhatconference.com/">Now What Conference 2013</a></li>
     <li><a href="http://gilbaneboston.com">Gilbane Boston 2012</a></li>
     <li><a href="http://gilbaneboston.com">Gilbane Boston 2011</a></li>
