fixed title heading styles

--- a/content/index.html
+++ b/content/index.html
@@ -12,4 +12,4 @@ description: Personal website for Seth Gottlieb
     <li>Googles as <a href="http://www.google.com/profiles/sggottlieb">sggottlieb</a></li>
     <li>Works at <a href="http://www.lionbridge.com">Lionbridge</a></li>
 </ul>
-<p>I am <a href="/social">all over the web</a> but you can always find me here.</p>
+<p>I am all over the web but you can always find me here.</p>
