--- a/content/index.html
+++ b/content/index.html
@@ -7,9 +7,9 @@ description: Personal website for Seth Gottlieb
 
 <p>This is the personal website of Seth Gottlieb...  The same Seth Gottlieb who:</p>
 <ul>
-    <li>Blogs as <a href="http://www.contenthere.net">Content Here</a></li>
-    <li>Tweets as <a href="http://twitter.com/sggottlieb">sggottlieb</a></li>
-    <li>Googles as <a href="http://www.google.com/profiles/sggottlieb">sggottlieb</a></li>
-    <li>Works at <a href="http://www.lionbridge.com">Lionbridge</a></li>
+    <li>Blogs as <a href="https://www.contenthere.net">Content Here</a></li>
+    <li>Works at <a href="https://www.aberdeen.com">Aberdeen</a></li>
+    <li>Tweets as <a href="https://twitter.com/sggottlieb">sggottlieb</a></li>
+    <li>Links as <a href="https://www.aberdeen.com">sgottlieb</a></li>
 </ul>
 <p>I am all over the web but you can always find me here.</p>
