updated to reference Amazon rather than Aberdeen

--- a/content/index.html
+++ b/content/index.html
@@ -8,8 +8,8 @@ description: Personal website for Seth Gottlieb
 <p>This is the personal website of Seth Gottlieb...  The same Seth Gottlieb who:</p>
 <ul>
     <li>Blogs as <a href="https://www.contenthere.net">Content Here</a></li>
-    <li>Works at <a href="https://www.aberdeen.com">Aberdeen</a></li>
+    <li>Works at <a href="https://www.amazon.com">Amazon</a></li>
     <li>Tweets as <a href="https://twitter.com/sggottlieb">sggottlieb</a></li>
-    <li>Links as <a href="https://www.aberdeen.com">sgottlieb</a></li>
+    <li>Links as <a href="https://www.linkedin.com/in/sgottlieb/">sgottlieb</a></li>
 </ul>
 <p>I am all over the web but you can always find me here.</p>
